update facilities page

--- a/src/pages/facilities.html
+++ b/src/pages/facilities.html
@@ -401,65 +401,65 @@
             "Pharmacy: Dispensing medications and health products."
             ] },
           { top: "47%", left: "78%", name: "X-Ray", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/or.webp"
           ], descriptions: "X-Ray Department: Diagnostic imaging services." },
           { top: "80%", left: "75%", name: "Laboratory", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/lab_1.webp", "../img/facility/lab_2.webp"
           ], descriptions: "X-Ray Department: Diagnostic imaging services." },
           { top: "65%", left: "92%", name: "ER", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/er.webp"
           ], descriptions: "Laboratory: Blood tests, urinalysis, and more." },
         ] },
       2: { image: "../img/floor_plan/2.avif", hotspots: [
           { top: "37%", left: "4%", name: "224", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/or.webp"
           ], descriptions: "Regular Private | Php2200.00" },
           { top: "37%", left: "9.5%", name: "222", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/or.webp"
           ], descriptions: "Intensive Care Unit for critical patients." },
           { top: "37%", left: "14.5%", name: "220", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/or.webp"
           ], descriptions: "Intensive Care Unit for critical patients." },
           { top: "37%", left: "23%", name: "218", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/or.webp"
           ], descriptions: "Intensive Care Unit for critical patients." },
           { top: "37%", left: "32.5%", name: "216", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/or.webp"
           ], descriptions: "Intensive Care Unit for critical patients." },
           { top: "37%", left: "37%", name: "214", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/or.webp"
           ], descriptions: "Intensive Care Unit for critical patients." },
           { top: "37%", left: "41.5%", name: "211", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/or.webp"
           ], descriptions: "Intensive Care Unit for critical patients." },
           { top: "37%", left: "46%", name: "209", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/or.webp"
           ], descriptions: "Intensive Care Unit for critical patients." },
           { top: "37%", left: "53%", name: "EDP/IT", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/or.webp"
           ], descriptions: "SERVER!!!!!." },
         ] },
       3: { image: "../img/floor_plan/3.avif", hotspots: [
           { top: "45%", left: "40%", name: "OR", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/or.webp"
           ], descriptions: "Operating Room for surgeries." },
           { top: "65%", left: "60%", name: "Recovery Room", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/or.webp"
           ], descriptions: "Post-surgery patient recovery area." },
         ] },
       4: { image: "../img/floor_plan/4.avif", hotspots: [
           { top: "35%", left: "45%", name: "Private Rooms", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/or.webp"
           ], descriptions: "Private patient rooms for in-patient care." },
         ] },
       5: { image: "../img/floor_plan/5.avif", hotspots: [
           { top: "50%", left: "50%", name: "Suite Room", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/or.webp"
           ], descriptions: "Luxurious suite for VIP patients." },
         ] },
       6: { image: "../img/floor_plan/6.avif", hotspots: [
           { top: "40%", left: "60%", name: "Board of Directors Office", images: [
-            "../img/facility/72ba70_e5c14dfc5ea64ea8b2c0d360a5cd3868_mv2_d_3141_2303_s_2.webp"
+            "../img/facility/or.webp"
           ], descriptions: "Administrative board meeting office." },
         ] }
     };
