--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
       <div class="mt-12 grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
         <!-- Facility 1 -->
         <div class="bg-white shadow-md rounded-xl overflow-hidden hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="200">
-          <img src="src/img/facility/72ba70_2f2a6a7c21ae4fc59db98014537562db_mv2_d_4320_3240_s_4_2.webp" fetchpriority="low" loading="lazy" alt="Emergency Room" class="w-full h-48 object-cover">
+          <img src="src/img/facility/er.webp" fetchpriority="low" loading="lazy" alt="Emergency Room" class="w-full h-48 object-cover">
           <div class="p-6 text-center">
             <h3 class="text-xl font-semibold text-gray-800">Emergency Room</h3>
             <p class="text-gray-600 text-sm mt-2">24/7 emergency services with advanced life support equipment.</p>
@@ -656,7 +656,7 @@
 
         <!-- Facility 2 -->
         <div class="bg-white shadow-md rounded-xl overflow-hidden hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="250">
-          <img src="src/img/facility/72ba70_0551b19b1bcb46109cf8dfe91de8f37d_mv2_d_4320_3240_s_4_2.webp" alt="Operating Theater" class="w-full h-48 object-cover">
+          <img src="src/img/facility/or.webp" alt="Operating Theater" class="w-full h-48 object-cover">
           <div class="p-6 text-center">
             <h3 class="text-xl font-semibold text-gray-800">Operating Theater</h3>
             <p class="text-gray-600 text-sm mt-2">Fully equipped surgical suites with sterile and modern technology.</p>
@@ -665,7 +665,7 @@
 
         <!-- Facility 3 -->
         <div class="bg-white shadow-md rounded-xl overflow-hidden hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="300">
-          <img src="src/img/facility/72ba70_02c9944646934fc694383a6896e1091e_mv2_d_3416_2319_s_2.webp" alt="Laboratory" class="w-full h-48 object-cover">
+          <img src="src/img/facility/lab_1.webp" alt="Laboratory" class="w-full h-48 object-cover">
           <div class="p-6 text-center">
             <h3 class="text-xl font-semibold text-gray-800">Diagnostic Laboratory</h3>
             <p class="text-gray-600 text-sm mt-2">Comprehensive lab tests with fast and accurate results.</p>
@@ -674,7 +674,7 @@
 
         <!-- Facility 4 -->
         <div class="bg-white shadow-md rounded-xl overflow-hidden hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="350">
-          <img src="src/img/facility/72ba70_366c4924ad5d427f940ce97867685e1c_mv2_d_3548_3240_s_4_2.webp" alt="ICU" class="w-full h-48 object-cover">
+          <img src="src/img/facility/icu.webp" alt="ICU" class="w-full h-48 object-cover">
           <div class="p-6 text-center">
             <h3 class="text-xl font-semibold text-gray-800">Intensive Care Unit (ICU)</h3>
             <p class="text-gray-600 text-sm mt-2">Critical care units with round-the-clock monitoring and specialists.</p>
@@ -683,7 +683,7 @@
 
         <!-- Facility 5 -->
         <div class="bg-white shadow-md rounded-xl overflow-hidden hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="400">
-          <img src="src/img/facility/72ba70_61165bbf148448049e9a0e5aa7890632_mv2_d_2959_1989_s_2.webp" alt="Pharmacy" class="w-full h-48 object-cover">
+          <img src="src/img/facility/er_2.webp" alt="Pharmacy" class="w-full h-48 object-cover">
           <div class="p-6 text-center">
             <h3 class="text-xl font-semibold text-gray-800">Pharmacy</h3>
             <p class="text-gray-600 text-sm mt-2">In-house pharmacy providing a wide range of medicines and supplies.</p>
@@ -692,7 +692,7 @@
 
         <!-- Facility 6 -->
         <div class="bg-white shadow-md rounded-xl overflow-hidden hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="450">
-          <img src="src/img/facility/72ba70_80653b032af94efdaebac50dfb73b6d3_mv2_d_3739_2465_s_4_2.webp" alt="Private Rooms" class="w-full h-48 object-cover">
+          <img src="src/img/facility/small_private.webp" alt="Private Rooms" class="w-full h-48 object-cover">
           <div class="p-6 text-center">
             <h3 class="text-xl font-semibold text-gray-800">Private Rooms</h3>
             <p class="text-gray-600 text-sm mt-2">Comfortable private rooms for patients and their families.</p>
