--- a/careers.html
+++ b/careers.html
@@ -188,7 +188,7 @@
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       
       <!-- Logo -->
-      <a href="" class="flex items-center justify-center">
+      <a href="/index" class="flex items-center justify-center">
         <img src="src/img/logo/mvh_logo_optimized.avif" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
         <span class="self-center text-2xl font-semibold whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
         <span class="self-center text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
@@ -205,13 +205,13 @@
       <!-- Navbar Menu -->
       <div id="navbar-menu" class="hidden w-full lg:flex lg:w-auto">
         <ul class="font-medium flex flex-col p-4 text-lg lg:flex-row lg:space-x-7">
-          <li><a href="index.html" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
+          <li><a href="/index" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
           <li><a href="#services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Services</a></li>
-          <li><a href="facilities.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
-          <li><a href="doctors.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
-          <li><a href="about-us.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
+          <li><a href="/facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
+          <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
+          <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
           <li>
-            <a href="" class="block w-full text-center bg-green-700 text-white rounded-md hover:bg-green-800 px-6 py-2">Careers</a>
+            <a href="/careers" class="block w-full text-center bg-green-700 text-white rounded-md hover:bg-green-800 px-6 py-2">Careers</a>
           </li>
         </ul>
       </div>
@@ -316,10 +316,10 @@
         <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-gray-600 text-sm">
           <li><a href="#services" class="hover:text-[#04813b] transition">Our Services</a></li>
-          <li><a href="facilities.html" class="hover:text-[#04813b] transition">Our Facilities</a></li>
-          <li><a href="doctors.html" class="hover:text-[#04813b] transition">Our Doctors</a></li>
-          <li><a href="about-us.html" class="hover:text-[#04813b] transition">About Us</a></li>
-          <li><a href="" class="hover:text-[#04813b] transition">Careers</a></li>
+          <li><a href="/facilities" class="hover:text-[#04813b] transition">Our Facilities</a></li>
+          <li><a href="/doctors" class="hover:text-[#04813b] transition">Our Doctors</a></li>
+          <li><a href="/about-us" class="hover:text-[#04813b] transition">About Us</a></li>
+          <li><a href="/careers" class="hover:text-[#04813b] transition">Careers</a></li>
         </ul>
       </div>
 
@@ -391,8 +391,8 @@
 <span class="p-2 text-[0.5rem] opacity-80 flex flex-wrap items-center gap-1 justify-center">website created and maintained by <a href="https://xtianbar.vercel.app/" target="_blank"><img src="src/img/logo/xtianbar-logo.avif" alt="Metro Vigan Hospital Logo" class="h-2 w-auto"></a></span>
         <p>&copy; 2025 Metro Vigan Hospital. All rights reserved.</p>
         <div class="space-x-4 mt-2 md:mt-0">
-          <a href="privacy-policy.html" class="hover:text-[#04813b] transition">Privacy Policy</a>
-          <a href="terms-of-service.html" class="hover:text-[#04813b] transition">Terms of Service</a>
+          <a href="/privacy-policy" class="hover:text-[#04813b] transition">Privacy Policy</a>
+          <a href="/terms-of-service" class="hover:text-[#04813b] transition">Terms of Service</a>
         </div>
       </div>
     </div>
