--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -66,7 +66,7 @@
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       
       <!-- Logo -->
-      <a href="index.html" class="flex items-center justify-center">
+      <a href="/index" class="flex items-center justify-center">
         <img src="src/img/logo/mvh_logo_optimized.avif" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
         <span class="self-center text-2xl font-semibold whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
         <span class="self-center text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
@@ -83,13 +83,13 @@
       <!-- Navbar Menu -->
       <div id="navbar-menu" class="hidden w-full lg:flex lg:w-auto">
         <ul class="font-medium flex flex-col p-4 text-lg lg:flex-row lg:space-x-7">
-          <li><a href="#home" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
+          <li><a href="/index" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
           <li><a href="#services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Services</a></li>
-          <li><a href="facilities.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
-          <li><a href="doctors.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
-          <li><a href="about-us.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
+          <li><a href="/facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
+          <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
+          <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
           <li>
-            <a href="#contact" class="block w-full text-center bg-green-700 text-white rounded-md hover:bg-green-800 px-6 py-2">Contact Us</a>
+            <a href="index.html#contact" class="block w-full text-center bg-green-700 text-white rounded-md hover:bg-green-800 px-6 py-2">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -123,7 +123,7 @@
       <p>You are responsible for providing accurate personal and medical information. You must also comply with hospital policies, including payment obligations and proper conduct within our premises.</p>
 
       <h2 class="text-xl font-semibold mt-6">4. Privacy & Data Protection</h2>
-      <p>Your personal and health data will be protected in compliance with the Data Privacy Act. Please refer to our <a href="privacy-policy.html" class="text-green-700 underline">Privacy Notice</a> for details.</p>
+      <p>Your personal and health data will be protected in compliance with the Data Privacy Act. Please refer to our <a href="/privacy-policy" class="text-green-700 underline">Privacy Notice</a> for details.</p>
 
       <h2 class="text-xl font-semibold mt-6">5. Limitation of Liability</h2>
       <p>While we provide the highest standard of care, Metro Vigan Hospital shall not be held liable for any indirect damages, except as required by law.</p>
@@ -156,10 +156,10 @@
         <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-gray-600 text-sm">
           <li><a href="#services" class="hover:text-green-600 transition">Our Services</a></li>
-          <li><a href="facilities.html" class="hover:text-green-600 transition">Our Facilities</a></li>
-          <li><a href="doctors.html" class="hover:text-green-600 transition">Our Doctors</a></li>
-          <li><a href="about-us.html" class="hover:text-green-600 transition">About Us</a></li>
-          <li><a href="careers.html" class="hover:text-green-600 transition">Careers</a></li>
+          <li><a href="/facilities" class="hover:text-green-600 transition">Our Facilities</a></li>
+          <li><a href="/doctors" class="hover:text-green-600 transition">Our Doctors</a></li>
+          <li><a href="/about-us" class="hover:text-green-600 transition">About Us</a></li>
+          <li><a href="/careers" class="hover:text-green-600 transition">Careers</a></li>
         </ul>
       </div>
 
@@ -231,8 +231,8 @@
 <span class="p-2 text-[0.5rem] opacity-80 flex flex-wrap items-center gap-1 justify-center">website created and maintained by <a href="https://xtianbar.vercel.app/" target="_blank"><img src="src/img/logo/xtianbar-logo.avif" alt="Metro Vigan Hospital Logo" class="h-2 w-auto"></a></span>
         <p>&copy; 2025 Metro Vigan Hospital. All rights reserved.</p>
         <div class="space-x-4 mt-2 md:mt-0">
-          <a href="privacy-policy.html" class="hover:text-green-600 transition">Privacy Policy</a>
-          <a href="" class="hover:text-green-600 transition">Terms of Service</a>
+          <a href="/privacy-policy" class="hover:text-green-600 transition">Privacy Policy</a>
+          <a href="/terms-of-service" class="hover:text-green-600 transition">Terms of Service</a>
         </div>
       </div>
     </div>
