--- a/facilities.html
+++ b/facilities.html
@@ -1,13 +1,132 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="overflow-x-hidden">
 <head>
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Multi-Floor Plan</title>
-  <script src="https://cdn.tailwindcss.com"></script>
 
+  <!-- Title & Description -->
+  <title>Facilities | Metro Vigan Hospital</title>
+
+  <!-- Author -->
+  <meta name="author" content="Metro Vigan Hospital">
+  
+  <!-- Robots (SEO Indexing) -->
+  <meta name="robots" content="index, follow">
+  
+  <!-- Meta Description -->
+  <meta name="description" content="Metro Vigan Hospital is a PhilHealth-accredited Level 2 hospital in Bantay, Ilocos Sur, providing quality healthcare services with expert doctors and modern facilities." />
+
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="Metro Vigan Hospital, MVH, hospital in Ilocos Sur, Bantay hospital, healthcare services, PhilHealth accredited, Ilocos Sur doctors, modern hospital facilities" />
+
+  <!-- Open Graph (Facebook & Instagram) -->
+  <meta property="og:title" content="Metro Vigan Hospital - Quality Healthcare in Ilocos Sur" />
+  <meta property="og:description" content="Providing compassionate and expert medical care. Metro Vigan Hospital is a PhilHealth-accredited Level 2 hospital with modern facilities and highly skilled doctors." />
+  <meta property="og:image" content="https://www.metroviganhospital.com/src/img/logo/mvh_logo.avif" />
+  <meta property="og:url" content="https://www.metroviganhospital.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Metro Vigan Hospital" />
+
+  <!-- icons & stylesheet -->
   <link rel="stylesheet" href="src/css/style.css">
 
+  <link rel="icon" href="src/img/logo/favicon.ico" type="image/x-icon">
+
+  <!-- Google Font: Roboto -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
+  <script src="https://cdn.tailwindcss.com"></script>
+  
+  <!-- For SEO Ranking -->
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Organization",
+      "name": "Metro Vigan Hospital",
+      "url": "https://www.metroviganhospital.com",
+      "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.avif",
+      "sameAs": [
+        "https://www.facebook.com/MetroViganHospital",
+        "https://www.instagram.com/MetroViganHospital"
+      ],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+63-927-509-0414",
+        "contactType": "Customer Service",
+        "areaServed": "PH",
+        "availableLanguage": "English"
+      },
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Rizal St., Brgy. IV (Poblacion)",
+        "addressLocality": "Bantay",
+        "addressRegion": "Ilocos Sur",
+        "postalCode": "2727",
+        "addressCountry": "PH"
+      }
+    },
+    {
+      "@type": "WebSite",
+      "url": "https://www.metroviganhospital.com",
+      "name": "Metro Vigan Hospital",
+      "description": "Metro Vigan Hospital provides world-class healthcare services in Ilocos Sur, with expert doctors, modern facilities, and patient-centered care.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Metro Vigan Hospital",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.avif"
+        }
+      }
+    },
+    {
+      "@type": "AboutPage",
+      "url": "https://www.metroviganhospital.com/about",
+      "name": "About Us - Metro Vigan Hospital",
+      "description": "Learn about Metro Vigan Hospital, its history, vision, mission, and dedication to delivering quality healthcare services in Ilocos Sur."
+    },
+    {
+      "@type": "JobPosting",
+      "title": "Careers at Metro Vigan Hospital",
+      "description": "Explore job opportunities for doctors, nurses, allied health professionals, and administrative staff at Metro Vigan Hospital.",
+      "hiringOrganization": {
+        "@type": "Organization",
+        "name": "Metro Vigan Hospital",
+        "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.avif",
+        "sameAs": "https://www.metroviganhospital.com"
+      },
+      "employmentType": "FULL_TIME",
+      "jobLocation": {
+        "@type": "Place",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Rizal St., Brgy. IV (Poblacion)",
+          "addressLocality": "Bantay",
+          "addressRegion": "Ilocos Sur",
+          "postalCode": "2727",
+          "addressCountry": "PH"
+        }
+      }
+    },
+    {
+      "@type": "WebPage",
+      "url": "https://www.metroviganhospital.com/privacy-policy",
+      "name": "Privacy Policy - Metro Vigan Hospital",
+      "description": "Read Metro Vigan Hospital's Privacy Policy on how we collect, use, and protect patient data under the Data Privacy Act."
+    },
+    {
+      "@type": "WebPage",
+      "url": "https://www.metroviganhospital.com/terms-of-service",
+      "name": "Terms of Service - Metro Vigan Hospital",
+      "description": "Review the Terms of Service for using Metro Vigan Hospital’s website and medical services."
+    }
+  ]
+}
+  </script>
 
 </head>
 <body class="text-gray-800 overflow-x-hidden">
@@ -17,7 +136,7 @@
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       
       <!-- Logo -->
-      <a href="/index" class="flex items-center justify-center">
+      <a href="/" class="flex items-center justify-center">
         <img src="src/img/logo/mvh_logo_optimized.avif" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
         <span class="self-center text-2xl font-semibold whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
         <span class="self-center text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
@@ -34,7 +153,7 @@
       <!-- Navbar Menu -->
       <div id="navbar-menu" class="hidden w-full lg:flex lg:w-auto">
         <ul class="font-medium flex flex-col p-4 text-lg lg:flex-row lg:space-x-7">
-          <li><a href="/index" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
+          <li><a href="/" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
           <li><a href="#services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Services</a></li>
           <li><a href="/facilities" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700 decoration-green-700 underline underline-offset-[0.425rem]">Facilities</a></li>
           <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
