--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@
 </section>
 
 <!-- CONTACT US -->    
-<section id="contact" class="py-16 bg-gray-50">
+<section class="py-16 bg-gray-50">
   <div class="max-w-7xl mx-auto px-6 md:px-12">
     <!-- Accreditation Row -->
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 text-center items-center mb-16" data-aos="fade-up" data-aos-delay="100">
@@ -1192,14 +1192,13 @@
       </div>
 
       <!-- Right: Contact Us Form -->
-      <div data-aos="fade-right" data-aos-delay="200">
+      <div id="contact" data-aos="fade-right" data-aos-delay="200">
   <h2 class="text-2xl font-bold text-gray-800 mb-4">Contact Us</h2>
   <p class="text-gray-600 mb-6">
     Have questions or need assistance? Send us a message, and our team will respond as soon as possible.
   </p>
 
-  <!-- ✅ Replace the action URL with your Formspree endpoint -->
-  <form action="https://formspree.io/f/xnnzoyqq" method="POST" class="space-y-4">
+  <form id="contact-form" class="space-y-4">
     <div>
       <label for="name" class="block text-sm font-medium text-gray-700">Full Name</label>
       <input type="text" id="name" name="name" required 
@@ -1218,13 +1217,13 @@
                 class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500"></textarea>
     </div>
 
-    <!-- Optional: Add a hidden input to redirect after submission -->
-    <input type="hidden" name="_redirect" value="https://metroviganhospital.com/thank-you" />
-
-    <button type="submit" 
-            class="w-full hover:bg-[#16a94c] text-white font-medium py-2 px-4 rounded-md bg-[#04813b] transition">
-      Send Message
-    </button>
+    <div class="flex flex-col sm:flex-row sm:items-center sm:gap-4">
+      <button type="submit" 
+              class="hover:bg-[#16a94c] text-white font-medium py-2 px-4 rounded-md bg-[#04813b] transition">
+        Send Message
+      </button>
+      <span id="thank-you-message" class="text-green-600 font-medium hidden pt-2 sm:text-center">Thank you! Message sent.</span>
+    </div>
   </form>
 </div>
 
@@ -1399,6 +1398,42 @@
       </div>
     </div>
   </footer>
+
+
+<script>
+  const form = document.getElementById('contact-form');
+  const thankYouMessage = document.getElementById('thank-you-message');
+
+  form.addEventListener('submit', async function (e) {
+    e.preventDefault();
+
+    const formData = new FormData(form);
+
+    try {
+      const response = await fetch("https://formspree.io/f/xnnzoyqq", {
+        method: "POST",
+        body: formData,
+        headers: {
+          'Accept': 'application/json'
+        }
+      });
+
+      if (response.ok) {
+        form.reset();
+        thankYouMessage.classList.remove('hidden');
+
+        // Optionally hide the message after 5 seconds
+        setTimeout(() => {
+          thankYouMessage.classList.add('hidden');
+        }, 5000);
+      } else {
+        alert("Something went wrong. Please try again later.");
+      }
+    } catch (error) {
+      alert("There was an error submitting the form.");
+    }
+  });
+</script>
 
 <!-- icons / css -->
 <script>
