--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+
   <script src="https://cdn.tailwindcss.com"></script>
   
   <!-- For SEO Ranking -->
@@ -1192,40 +1194,93 @@
       </div>
 
       <!-- Right: Contact Us Form -->
-      <div id="contact" data-aos="fade-right" data-aos-delay="200">
+
+<div id="contact" data-aos="fade-right" data-aos-delay="200">
   <h2 class="text-2xl font-bold text-gray-800 mb-4">Contact Us</h2>
   <p class="text-gray-600 mb-6">
     Have questions or need assistance? Send us a message, and our team will respond as soon as possible.
   </p>
 
   <form id="contact-form" class="space-y-4">
-    <div>
+    <!-- Full Name -->
+    <div class="relative">
       <label for="name" class="block text-sm font-medium text-gray-700">Full Name</label>
-      <input type="text" id="name" name="name" required 
-            class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
+      <div class="relative">
+        <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
+          <i class="fas fa-user"></i>
+        </span>
+        <input type="text" id="name" name="name" required 
+              class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
+      </div>
     </div>
 
-    <div>
-      <label for="email" class="block text-sm font-medium text-gray-700">Email Address</label>
-      <input type="email" id="email" name="email" required 
-            class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
+    <!-- Phone + Address: 2 Columns -->
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+      <!-- Phone -->
+      <div class="relative ">
+        <label for="phone" class="block text-sm font-medium text-gray-700">Phone Number</label>
+        <div class="relative">
+          <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
+            <i class="fas fa-phone"></i>
+          </span>
+          <input type="tel" id="phone" name="phone"
+                pattern="^(09|\+639)\d{9}$"
+                title="Enter a valid PH number: starts with 09 or +639"
+                required
+                class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
+        </div>
+      </div>
+
+      <!-- Email Address -->
+      <div class="relative md:col-span-2 flex flex-col">
+        <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+        <div class="relative">
+          <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
+            <i class="fas fa-envelope"></i>
+          </span>
+          <input type="email" id="email" name="email" required
+                class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
+        </div>
+      </div>
     </div>
 
-    <div>
+    <!-- Address -->
+    <div class="relative">
+      <label for="address" class="block text-sm font-medium text-gray-700">Address</label>
+      <div class="relative">
+        <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
+          <i class="fas fa-location-dot"></i>
+        </span>
+        <input type="text" id="address" name="address" required 
+              class="pl-10 mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500">
+      </div>
+    </div>
+
+    <!-- Message -->
+    <div class="relative">
       <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
       <textarea id="message" name="message" rows="4" required 
                 class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500"></textarea>
     </div>
 
+    <!-- Submit Button + Thank You Message -->
     <div class="flex flex-col sm:flex-row sm:items-center sm:gap-4">
       <button type="submit" 
               class="hover:bg-[#16a94c] text-white font-medium py-2 px-4 rounded-md bg-[#04813b] transition">
         Send Message
       </button>
-      <span id="thank-you-message" class="text-green-600 font-medium hidden pt-2 sm:text-center">Thank you! Message sent.</span>
+      <!-- Thank You + Animated Checkmark -->
+<div id="thank-you-wrapper" class="flex items-center gap-2 hidden text-green-600 font-medium mt-2 sm:mt-0 transition duration-300">
+  <!-- SVG checkmark -->
+  <svg id="check-icon" class="w-6 h-6 text-green-500 scale-75 opacity-0 transition-transform duration-500 ease-out" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
+  </svg>
+  <span id="thank-you-message">Thank you! Message sent.</span>
+</div>
     </div>
   </form>
 </div>
+
 
     </div>
   </div>
@@ -1402,12 +1457,20 @@
 
 <script>
   const form = document.getElementById('contact-form');
-  const thankYouMessage = document.getElementById('thank-you-message');
+  const thankYouWrapper = document.getElementById('thank-you-wrapper');
+  const checkIcon = document.getElementById('check-icon');
 
   form.addEventListener('submit', async function (e) {
     e.preventDefault();
 
     const formData = new FormData(form);
+
+    const phoneInput = form.querySelector('#phone');
+    const phonePattern = /^(09|\+639)\d{9}$/;
+    if (!phonePattern.test(phoneInput.value)) {
+      alert("Please enter a valid Philippine phone number (starts with 09 or +639).");
+      return;
+    }
 
     try {
       const response = await fetch("https://formspree.io/f/xnnzoyqq", {
@@ -1420,11 +1483,16 @@
 
       if (response.ok) {
         form.reset();
-        thankYouMessage.classList.remove('hidden');
 
-        // Optionally hide the message after 5 seconds
+        // Show thank you + animate checkmark
+        thankYouWrapper.classList.remove('hidden');
+        checkIcon.classList.remove('opacity-0', 'scale-75');
+        checkIcon.classList.add('opacity-100', 'scale-100');
+
         setTimeout(() => {
-          thankYouMessage.classList.add('hidden');
+          checkIcon.classList.add('opacity-0', 'scale-75');
+          checkIcon.classList.remove('opacity-100', 'scale-100');
+          thankYouWrapper.classList.add('hidden');
         }, 5000);
       } else {
         alert("Something went wrong. Please try again later.");
